# UR5-Robotiq-2F-85

./: .gitignore
catkin_ws/src/john/ur5_robotiq_simulation/: CMakeLists.txt  package.xml
catkin_ws/src/john/ur5_robotiq_simulation/config/: UR5_controller.yaml  gripper_controller.yaml
catkin_ws/src/john/ur5_robotiq_simulation/launch/: ur5_with_gripper_gazebo.launch
catkin_ws/src/john/ur5_robotiq_simulation/launch/inc/: load_ur.launch.xml  load_ur5_Atividade2.launch.xml  load_ur_Atividade2.launch.xml
catkin_ws/src/john/ur5_robotiq_simulation/urdf/: d435.urdf.xacro  movable_block.urdf.xacro  ur.xacro  ur_Atividade2.xacro
